Alpha 8.1 - 20th November 2021

- Added elephants as a wild animal (beware their great strength!)
- The player's first settlement (before they're asked about the tutorial) will now auto-select a start location
- Settlers can now free themselves from being stuck under furniture while in a corner
- Creatures now wake up when attacked
- Mushrooms no longer say that they care about being watered
- Graves can now be dug when it has snowed
- Added settler name to tantrum notification
- Pause for notifications is now on by default
- Corrected the way demolition works on tiles with both furniture and a constructed floor
- Fix for a crash when a corpse is off the edge of the map somehow

Alpha 8.0.2 - 18th November 2021

- Added an option to re-enable the tutorial
- Fix for a crash when clicking on the broken shield notification
- Fix for a crash that could happen while having a tantrum near the map edge
- Fix for a crash when a dwarf is sleeping and has somehow been pushed out of the edge of the map

Alpha 8.0.1 - 10th November 2021

- Fix for crafting jobs which got stuck with an inaccessible job location

Alpha 8 - 9th November 2021

- Reworked HUMANOID entities into more generic CREATURE entity type
- Settlers at very low happiness will now have several tantrums (attacking a nearby creature or furniture) before breaking and giving up on life
- Added "Race" type for creatures containing new data
- Definitions of body structure and organs for different races
- Dwarven body shape (fat/average/strong) is now based on a strength stat, determined by a strength distribution described as part of the race
- Added non-settler creature behaviour, to represent wild animals at this stage
- Added the following wild animals:
    - Deer
    - Fox
    - Wild boar
- Added Armory zone for crafting of weapons (and later armour), alongside weapons stockpile type
- Settler can now have a type of weapon assigned for them to keep hold of for combat