@@ -1,3 +1,8 @@
+Alpha 8.1.1 - 22nd November 2021
+
+- Fixed an issue where dwarves would not die from status effects like starvation and dehydration!
+- Fix for a crash when loading the game with a displayed hint that can no longer be found
+
 Alpha 8.1 - 20th November 2021
 
 - Added elephants as a wild animal (beware their great strength!)
